--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.5.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
+    "vue-sweetalert2": "^5.0.5",
     "vuetify": "^3.3.15"
   },
   "devDependencies": {
