--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "axios": "^1.5.0",
+    "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vue-sweetalert2": "^5.0.5",
