--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "@vuepic/vue-datepicker": "^7.2.2",
     "animate.css": "^4.1.1",
     "axios": "^1.5.0",
     "leaflet": "^1.9.4",
